Handled some warnings in some frontend and backend classes